--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10949,7 +10949,22 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.bg-purple-600 {
-  background-color: #1b0246;
+.bg-violet-900 {
+  background-color: #4c1d95;
+}
+
+.text-cyan-400 {
+  color: #22d3ee;
+}
+
+.text-violet-900 {
+  color: #4c1d95;
+}
+
+.rounded-full {
+  width: 50px;
+  height: 50px;
+  background: white;
+  border-radius: 100%;
 }
 
